# maplibre-native-ffi

./: .clang-tidy  .coderabbit.yaml  .gitattributes  .gitignore  .gitmodules  .miserc.toml  AGENTS.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Directory.Packages.props  GO_BINDINGS_REVIEW_LOOP.md  LICENSE  Maplibre.Native.slnx  README.md  build.gradle.kts  build.zig  conanfile.txt  dprint.jsonc  gradle.properties  hk.pkl  mise.ci.toml  mise.linux-arm64-vulkan.toml  mise.linux-x64-vulkan.toml  mise.macos-arm64-metal.toml  mise.macos-arm64-vulkan.toml  mise.toml  package.json  pixi.toml  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  settings.gradle.kts  vite.config.ts
.codex/environments/: environment.toml
.conan/profiles/: linux-arm64  linux-x64  macos-arm64  windows-x64
.devcontainer/: Dockerfile  devcontainer.json  mise.toml
.github/: dependabot.yml  pull_request_template.md
.github/config/: variants.toml
.github/scripts/: install-ci-software-graphics.sh
.github/workflows/: ci-variant.yml  ci.yml  devcontainer-image.yml  docs-pages.yml  mirror-codeberg.yml  snapshots.yml
.mise/: config.android-arm64-egl.toml  config.android-arm64-vulkan.toml  config.android-x64-egl.toml  config.android-x64-vulkan.toml  config.ios-arm64-metal.toml  config.ios-simulator-arm64-metal.toml  config.linux-arm64-egl.toml  config.linux-arm64-vulkan.toml  config.linux-x64-egl.toml  config.linux-x64-vulkan.toml  config.macos-arm64-egl.toml  config.macos-arm64-metal.toml  config.macos-arm64-vulkan.toml  config.ohos-arm64-egl.toml  config.ohos-arm64-vulkan.toml  config.windows-arm64-vulkan.toml  config.windows-arm64-wgl.toml  config.windows-x64-vulkan.toml  config.windows-x64-wgl.toml
.mise/env/: pixi-provider.sh
.mise/tasks/: conan-install  ensure-android-sdk  ensure-native-library  fetch-android-prefab  install-deps  install-native-tools  install-sdl3  native-metadata  package-native  setup-graphics  sync-submodules
.superset/: config.json  setup.sh
bindings/android-native/: build.gradle.kts  mise.toml
bindings/dart/: .gitignore  .pubignore  REVIEW_LOOPS.md  SPEC.md  analysis_options.yaml  ffigen.yaml  mise.toml  pubspec.yaml
bindings/dotnet/: Maplibre.Native.slnx  dotnet-tools.json  mise.toml
bindings/go/: README.md  SPEC.md  camera.go  camera_test.go  cgo_helpers.go  custom_geometry_test.go  errors.go  geometry.go  geometry_cgo.go  go.mod  handles.go  json.go  json_cgo.go  json_cgo_test.go  logging.go  logging_test.go  map.go  map_geometry_test.go  map_test.go  maplibre.go  maplibre_abi_test.go  maplibre_test.go  (+28 more)
bindings/node/: .gitignore  Cargo.toml  REVIEW.md  SPEC.md  camera.d.cts  error.cjs  error.d.cts  geo.cjs  geo.d.cts  index.cjs  index.d.cts  json.d.cts  log.cjs  log.d.cts  map.cjs  map.d.cts  mise.toml  offline.cjs  offline.d.cts  package.json  pnpm-lock.yaml  query.d.cts  render.cjs  render.d.cts  resource.cjs  resource.d.cts  runtime.cjs  runtime.d.cts  style.d.cts  tsconfig.json
bindings/node/src/: error.rs  lib.rs  map.rs  maplibre.rs  projection.rs  render.rs  runtime.rs  values.rs
bindings/node/test/: esm-smoke.mjs  maplibre.test.cjs  subpath-types.test.cts
bindings/python/: .gitignore  Cargo.toml  DECISIONS.md  REVIEW_LOOPS.md  SPEC.md  build.rs  mise.toml  pyproject.toml
bindings/python/python/maplibre_native/: __init__.py  _enum.py  _global.py  _lifecycle.py  _loader.py  _native.pyi  camera.py  errors.py  geo.py  json.py  log.py  map.py  offline.py  query.py  render.py  resource.py  runtime.py  style.py
bindings/python/src/: lib.rs
bindings/python/tests/: test_package.py  test_render_metal_attach.py  test_render_metal_owned.py  test_render_opengl_egl.py  test_render_vulkan_attach.py  test_render_vulkan_owned.py
bindings/python/tests/render_backend_helpers/: __init__.py  egl.py  metal.py  runtime.py  vulkan.py
bindings/rust/crates/maplibre-native/: Cargo.toml
bindings/rust/crates/maplibre-native-sys/: Cargo.toml  build.rs
bindings/rust/crates/maplibre-native-sys/src/: lib.rs
bindings/rust/crates/maplibre-native/src/: camera.rs  custom_geometry.rs  events.rs  geojson.rs  geometry.rs  handle.rs  json.rs  lib.rs  logging.rs  map.rs  options.rs  projection.rs  render.rs  resource.rs  runtime.rs  values.rs
bindings/rust/crates/maplibre-native/src/map/: style.rs  tests.rs
bindings/rust/crates/maplibre-native/src/render/: query.rs  tests.rs
bindings/vala/crates/maplibre-native-vala/: Cargo.toml  build.rs
bindings/vala/crates/maplibre-native-vala/include/maplibre-native-vala/: maplibre-native-vala.h
bindings/vala/crates/maplibre-native-vala/src/: events.rs  geo.rs  glib.rs  handles.rs  lib.rs  logging.rs  native_pointer.rs  projection.rs  query.rs  render.rs  resource.rs  status.rs  string_list.rs  values.rs
bindings/vala/crates/maplibre-native-vala/src/handles/: map_exports.rs  offline_exports.rs  option_exports.rs  options_impl.rs  runtime_exports.rs  tests.rs
buildSrc/: build.gradle.kts
ci/: manifest.py  variants.toml
cmake/: android_prefab.cmake  dlfcn_win32.cmake  egl.cmake  maplibre-native-c.pc.in  mln_artifact_metadata.cmake  mln_install.cmake  mln_lint.cmake  mln_maplibre_native.cmake  mln_options.cmake  mln_platform.cmake  mln_render_backend.cmake  mln_rust.cmake  mln_target.cmake  mln_version.cmake
docs/: astro.config.mts  mise.toml  package.json  pnpm-lock.yaml
examples/android-map/src/main/cpp/: CMakeLists.txt  vulkan_context.cpp
examples/rust-map/: Cargo.toml  mise.toml
examples/rust-map/src/: app.rs  graphics.rs  input.rs  main.rs  metal.rs  opengl.rs  render_target.rs  shell.rs  viewport.rs  vulkan.rs  vulkan_texture_compositor.rs
examples/rust-map/src/opengl/: platform.rs  platform_linux.rs  platform_windows.rs
examples/rust-map/src/render_target/: metal_target.rs  opengl_target.rs  vulkan_target.rs
gradle/: libs.versions.toml  native-artifact.gradle.kts
include/: maplibre_native_c.h
scripts/: run-ios-simulator-test.sh  run-with-timeout.ps1
src/platform/rust/: Cargo.toml  http_file_source.cpp  image.cpp
src/platform/rust/src/: android.rs  http.rs  http_client.rs  image.rs  lib.rs
(+1335 files in other folders)
