[workspace]
resolver = "3"
members = [
  "bindings/python",
  "bindings/rust/crates/maplibre-native",
  "bindings/rust/crates/maplibre-native-core",
  "bindings/rust/crates/maplibre-native-sys",
  "examples/rust-map",
  "src/platform/rust",
]

[workspace.package]
edition = "2024"
license = "BSD-2-Clause"
repository = "https://github.com/maplibre/maplibre-native-ffi"
