[package]
name = "maplibre-native-node"
version = "0.0.0"
build = "build.rs"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maplibre-native-core = { path = "../rust/crates/maplibre-native-core" }
maplibre-native-sys = { path = "../rust/crates/maplibre-native-sys" }
napi = { version = "3", default-features = false, features = ["napi10"] }
napi-derive = "3"
serde_json = "1"

[build-dependencies]
napi-build = "2"
