[build-system]
requires = ["maturin>=1.13,<2"]
build-backend = "maturin"

[project]
name = "maplibre-native"
version = "0.0.0"
description = "Low-level Python bindings for MapLibre Native FFI"
requires-python = ">=3.14"
license = "BSD-2-Clause"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
]
dependencies = []

[dependency-groups]
dev = [
  "maturin>=1.13,<2",
  "pytest>=9,<10",
  "ty==0.0.34",
]

[tool.maturin]
module-name = "maplibre_native._native"
python-source = "python"
features = ["pyo3/extension-module"]
