[package]
name = "rust-map"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
maplibre-native = { path = "../../bindings/rust/crates/maplibre-native" }
raw-window-handle = "0.6.2"
winit = { version = "0.29.15", features = ["rwh_06"] }
