[package]
name = "maplibre-native-sys"
version = "0.0.0"
build = "build.rs"
edition.workspace = true
license.workspace = true
links = "maplibre-native-c"
repository.workspace = true

[build-dependencies]
bindgen = "0.72.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
