[package]
name = "maplibre-native"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.10.0"
maplibre-native-support = { path = "../maplibre-native-support" }
maplibre-native-sys = { path = "../maplibre-native-sys" }

[dev-dependencies]
static_assertions = "1.1.0"
