[package]
name = "maplibre-native"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.10.0"
maplibre-native-core = { path = "../maplibre-native-core" }
maplibre-native-sys = { path = "../maplibre-native-sys" }

[dev-dependencies]
ash = "0.38.0"
glow = "0.16.0"
glutin = "0.32.3"
glutin-winit = "0.5.0"
static_assertions = "1.1.0"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
winit = { version = "0.30.12", features = ["rwh_06"] }
