[package]
name = "maplibre-native"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bitflags = "2.10.0"
maplibre-native-core = { path = "../maplibre-native-core" }
maplibre-native-sys = { path = "../maplibre-native-sys" }

[dev-dependencies]
ash = "0.38.0"
glow = "0.16.0"
glutin_egl_sys = "0.7.1"
libloading = "0.8.9"
static_assertions = "1.1.0"
