[package]
name = "maplibre-native-vala"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
maplibre-native-core = { path = "../../../rust/crates/maplibre-native-core" }
maplibre-native-sys = { path = "../../../rust/crates/maplibre-native-sys" }
